--- a/work.css
+++ b/work.css
@@ -3,7 +3,7 @@ body {
     /* position: relative; */
   
 }
-.container {
+.container{
     background-color: rgb(255, 255, 255);
     height:53vw;
     margin-top: 2%;
@@ -52,7 +52,6 @@ footer .nav a {
     font-size: 12px;
 }
 .wrapper {
-    /* adjust these to whatever makes the footer fit at the bottom of the page */
   min-height: 50%;
   margin-bottom:-25px;
 }
@@ -62,27 +61,26 @@ footer .nav a {
     height:330px;
     margin-left:170px;
 }
-
 .card-img-top{
     width:100%;
     height:100%;
 }
-
 .card-title, .card-img-overlay hr,p{
     color:white;
 }
-
 .listitems{
     list-style-type:none;
     margin:0;
     padding:0
 }
-
+/* #content{
+    height:auto;
+} */
 #content p{
     color: black;
 }
 
-.col-2, .col-3, .col-4 .listitems li,p{
+.col-md-2, .col-md-3, .col-md-4 .listitems li,p{
     font-size:12px;
     font-family: sans-serif;
 }
@@ -124,15 +122,15 @@ footer .nav a {
     height:400px;
 }
 
-.col-4, .col-8 h6{
+.col-md-4, .col-md-8 h6{
     font-size:small;
 }
 
-.col-4 hr{
+.col-md-4 hr{
     margin:0px; width:80px;
 }
 
-.col-8 hr{
+.col-md-8 hr{
     margin-top:0px;
 }
 
